# RinkRover-Autonomy

./: .gitignore  README.md  i2c_bno055.py  i2c_read_back_offset.py  imu_zero.py  localization_online_async.yaml  pyser.py  rinkrover-viz.rviz  sim_map_old.yaml
command_serializer/: CMakeLists.txt  package.xml  setup.cfg  setup.py
command_serializer/command_serializer/: command_serializer.py
rinkrover_description/: CMakeLists.txt  package.xml
rinkrover_description/config/: deploy_ekf_filter_params.yaml  deploy_localization_online_async.yaml  deploy_mapping_online_async.yaml  deploy_nav2_params.yaml  deploy_tricycle_drive_controller.yaml  rinkrover-viz.rviz  tricycle_drive_controller.yaml
rinkrover_description/description/: inertial_macros.xacro  materials.xacro  robot.urdf.xacro  robot_core.xacro  robot_properties.xacro  ros2_control.xacro  ros2_control_sim.xacro
rinkrover_description/launch/: navigation.launch.py  navigation_humble.launch.py  online_async_launch.py  rsp.launch.py
rinkrover_description/maps/: lester1.data  lester_map_A.data  lester_mar_19.data  sim_map.data  sim_map_old.pgm
rinkrover_gazebo/: CMakeLists.txt  package.xml
rinkrover_gazebo/include/rinkrover_gazebo/: rinkrover_drive.hpp
rinkrover_gazebo/launch/: rinkrover_rectangle.launch.py  robot_state_publisher.launch.py  spawn_rinkrover_robot.launch.py  spawn_turtlebot3.launch.py
rinkrover_gazebo/models/rinkrover_base_model/: model.config  model.sdf
rinkrover_gazebo/models/rinkrover_rectangle/: model.config  model.sdf
rinkrover_gazebo/models/turtlebot3_burger/: model-1_4.sdf  model.sdf
rinkrover_gazebo/src/: rinkrover_drive.cpp
rinkrover_gazebo/urdf/: rinkrover_base_model.urdf
rinkrover_gazebo/worlds/: rinkrover_rectangle.world
rinkrover_hardware/: CMakeLists.txt  package.xml  rinkrover_hardware.xml
rinkrover_hardware/hardware/: rr_system.cpp
rinkrover_hardware/hardware/include/rinkrover_hardware/: arduino_comms.hpp  i2c_comms.hpp  rr_system.hpp
rinkrover_hardware/launch/: ekf.launch.py  localization_launch.py  navigation.launch.py  online_async_launch.py  rr.launch.py
rplidar_ros/launch/: rplidar_c1_launch.py
rr_teleop_twist_keyboard/: README.md  package.xml  rr_teleop_twist_keyboard.py  setup.cfg  setup.py
twist_to_twist_stamped/: package.xml  setup.py
twist_to_twist_stamped/twist_to_twist_stamped/: twist_to_twist_stamped.py
