<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rinkrover_description</name>
  <version>0.0.0</version>
  <description>Robot Description for Rink Rover</description>
  <maintainer email="kirank.suren@gmail.com">Kiran</maintainer>
  <license>Apache</license>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>ros_gz</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>
  <exec_depend>rinkrover_hardware</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>tricycle_controller</exec_depend>
  <depend>twist_to_twist_stamped</depend>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
